# AmazonChess_Traditional_Archive_master

./: .gitignore  Amazons.sln  CMakeLists.txt  LICENSE  README.md
Amazons/: APPMODUL.CPP  Amazons.rc  Amazons.vcxproj  Amazons.vcxproj.filters  AmazonsAI.cpp  AmazonsAI.h  AmazonsApp.cpp  AmazonsApp.h  AmazonsGameController.h  AmazonsView.cpp  AmazonsView.h  EvaluationFunction.cpp  EvaluationFunction.h  GameSettingDlg.cpp  GameSettingDlg.h  GlobalFunctions.cpp  GlobalFunctions.h  HistoryDlg.cpp  HistoryDlg.h  MainFrm.cpp  MoveGenerator.cpp  MoveGenerator.h  Name.h  SearchEngine.cpp  SearchEngine.h  resource.h
